# pity-patrol

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-schema.json  go.mod  go.sum
.github/workflows/: build.yml  test.yml
cmd/pity-patrol/: main.go
pkg/claimer/: claimer.go
pkg/claimer/endfield/: endfield.go
pkg/claimer/hoyo/: hoyo.go
pkg/cli/: cli.go
pkg/config/: account.go  config.go  reset_times.go
pkg/constants/: constants.go
pkg/meta/: version.go
pkg/report/discord/: discord.go
pkg/report/reporter/: reporter.go
pkg/runner/: runner.go
pkg/runner/scheduler/: scheduler.go
pkg/util/: errors.go  http.go  pretty.go
pkgs/claimer/: claimer.go
pkgs/claimer/endfield/: endfield.go
pkgs/claimer/hoyo/: hoyo.go
pkgs/cli/: cli.go
pkgs/config/: account.go  config.go  reporter.go  reset_times.go
pkgs/constants/: constants.go
pkgs/report/: report.go
pkgs/report/discord/: discord.go
pkgs/report/reporter/: reporter.go
pkgs/runner/: runner.go
pkgs/runner/scheduler/: scheduler.go
src/: config.rs  constants.rs  main.rs
src/claimer/: claim.rs  endfield.rs  mod.rs
